[package]
name = "rust-js-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
oxc_resolver = "11.7.1"
anyhow = "1.0.99"
tokio = { version = "1", features = ["full"] }

[dependencies.rquickjs]
git = "https://github.com/DelSkayn/rquickjs.git"
version = "0.9.0"
features = ["full-async", "loader"]

[dependencies.llrt_modules]
path = "llrt/llrt_modules"
features = ["console", "timers", "fs", "buffer", "process"]
default-features = false
