[package]
name = "rust-js-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
oxc_resolver = "11.7.1"
anyhow = "1.0.99"
tokio = { version = "1", features = ["full"] }

[dependencies.rquickjs]
path = "./rquickjs"
features = ["loader", "parallel", "full-async"]

[dependencies.llrt_modules]
path = "llrt/llrt_modules"
features = ["console", "timers", "fs", "buffer", "process"]
default-features = false

[dependencies.rolldown]
path = "../rolldown/crates/rolldown"

[dependencies.rolldown_common]
path = "../rolldown/crates/rolldown_common"

[patch.'https://github.com/DelSkayn/rquickjs.git']
rquickjs = { path = "./rquickjs" }
